[package]
name = "dhcp_replacement-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
dhcp_replacement-common = { path = "../dhcp_replacement-common" }

network-types = { version = "0.0.7", default-features = false }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "dhcp_replacement"
path = "src/main.rs"
